Fix issue with the dropdown menu and overflow container

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -727,11 +727,6 @@ nav .active a {
     font-size: 0.95em;
 }
 
-.filter-on {
-    font-weight: bold;
-    color: #333;
-}
-
 /* public board */
 .public-board {
     margin-top: 5px;
@@ -745,13 +740,13 @@ nav .active a {
 
 /* board table */
 #board-container {
-    overflow-x: auto;
+    overflow-x: scroll;
+    padding-bottom: 150px; /* Space to avoid dropdown menu truncated */
 }
 
 #board td,
 #board th {
-    min-width: 230px;
-    max-width: 230px;
+    min-width: 240px;
 }
 
 #board th a {
@@ -898,7 +893,7 @@ a.task-board-nobody {
 
 .task-board-icons span {
     opacity: 0.5;
-    margin-left: 5px;
+    margin-left: 2px;
 }
 
 .task-board-icons a:hover,
