--- a/assets/css/src/task.css
+++ b/assets/css/src/task.css
@@ -97,7 +97,7 @@ a.task-board-nobody {
 
 .task-board-icons span {
     opacity: 0.5;
-    margin-left: 5px;
+    margin-left: 2px;
 }
 
 .task-board-icons a:hover,
